--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+
       - uses: actions/checkout@v2
 
       - name: Run script
