--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,9 @@ name: CI
 
 on:
   push:
-    branches:
-      - dev
+    branches: [dev]
+  pull_request:
+    branches: [dev]
 
 jobs:
   build:
@@ -27,7 +28,7 @@ jobs:
               branch=$2
 
               # Check if there are any commits affecting the directory
-              if git log -- $dir; then
+              if git log --quiet -- $dir; then
                   # Check if the branch already exists
                   if git show-ref --verify --quiet refs/heads/$branch; then
                       # If the branch exists, checkout to it and merge the changes from the dev branch
