[dev], added branch split after merging in to dev. Monorepo to API and BlazorApp

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,5 +40,5 @@ jobs:
                 split_changes 'API' $api_branch
                 split_changes 'BlazorApp' $blazorapp_branch
                 
-                git push origin $api_branch
-                git push origin $blazorapp_branch
+                git push  --force origin $api_branch
+                git push  --force origin $blazorapp_branch
