[dev], added branch split after merging in to dev. Monorepo to API and BlazorApp

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,21 +24,22 @@ jobs:
 
           # Function to split changes into a subproject branch
           split_changes() {
-                dir=$1
-                branch=$2
-            
-                # Create a new branch from an empty commit
-                git checkout --orphan $branch
-                git rm -rf .
-                git clean -fdx
-                git commit --allow-empty -m "Initial empty commit"
-            
-                # Filter the branch to only include the subproject directory
-                git filter-branch -f --subdirectory-filter $dir -- --all }
-                
-                # Call the function for each subproject
-                split_changes 'API' $api_branch
-                split_changes 'BlazorApp' $blazorapp_branch
-                
-                git push  --force origin $api_branch
-                git push  --force origin $blazorapp_branch
+          dir=$1
+          branch=$2
+
+          # Create a new branch from an empty commit
+          git checkout --orphan $branch
+          git rm -rf .
+          git clean -fdx
+          git commit --allow-empty -m "Initial empty commit"
+
+          # Filter the branch to only include the subproject directory
+          git filter-branch -f --subdirectory-filter $dir -- --all
+          }
+
+          # Call the function for each subproject
+          split_changes 'API' $api_branch
+          split_changes 'BlazorApp' $blazorapp_branch
+
+          git push --force origin $api_branch
+          git push --force origin $blazorapp_branch
