--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,36 +28,39 @@ jobs:
           blazorapp_branch="BlazorApp"
 
           # Function to copy directory to a new branch
-          copy_to_branch() {
-            dir=$1
-            branch=$2
-            dirToRemove=$3
+           copy_to_branch() {
+             dir=$1
+             branch=$2
+             dirToRemove=$3
 
             # Delete the branch if it exists, both locally and remotely
-            git branch -D $branch || true
-            git push origin --delete $branch || true
+             git branch -D $branch || true
+             git push origin --delete $branch || true
 
             # Create a new branch from the current branch and switch to it
-            git checkout -b $branch
+             git checkout -b $branch
 
             # Check if the to remove directory exists
-            if [ -d "$dirToRemove" ]; then
+             if [ -d "$dirToRemove" ]; then
                 # If the BlazorApp directory exists, remove it
                 rm -rf $dirToRemove
                 # Stage the changes
                 git add .
-            fi
+             fi
 
             # If there are no changes to commit, print a message
-            if git diff --quiet && git diff --staged --quiet; then
+             if git diff --quiet && git diff --staged --quiet; then
                 echo "No changes to commit"
-            else
+             else
                 # If there are changes to commit, make a commit
                 git commit -m "Git Actions Update To $branch"
-            fi
+             fi
 
             # Push the branch to the remote repository
              git push --force https://$PAT@github.com/boop-bap/JokeManagerMonoRepo.git $branch
+
+             # Checkout back to dev
+              git checkout dev
              }
 
             # Call the function for each directory
