--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,9 @@ jobs:
              dirToRemove=$3
 
              # Check if the branch exists remotely
-             if git ls-remote --quiet --heads origin $branch; then
-               # If the branch exists remotely, delete it
-               git push origin --delete $branch
+             if git ls-remote --heads origin $branch | grep $branch > /dev/null; then
+                # If the branch exists remotely, delete it
+                git push origin --delete $branch
              fi
              
             # Get the name of the branch that triggered the workflow
