[user], adding tokens

--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -32,10 +32,10 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "sslPort": 44336
     }
   }
 }
