--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5087"
+      },
+      "Https": {
+        "Url": "https://localhost:7145"
+      }
+    }
+  }
 }
