--- a/BlazorApp/appsettings.json
+++ b/BlazorApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "BaseUrl": "https://localhost:7145"
   }
 }
