--- a/API/JokeAPI.csproj
+++ b/API/JokeAPI.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="../Shared/**/*.cs" />
     <PackageReference Include="Azure.Identity" Version="1.12.0" />
     <PackageReference Include="DotNetEnv" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
