--- a/API/JokeAPI.csproj
+++ b/API/JokeAPI.csproj
@@ -15,6 +15,7 @@
     <Compile Include="../Shared/**/*.cs" />
     <PackageReference Include="Azure.Identity" Version="1.12.0" />
     <PackageReference Include="DotNetEnv" Version="3.1.0" />
+    <PackageReference Include="Isopoh.Cryptography.Argon2" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
